--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div id="quiz"></div>
-    <button id="submit"></button>
+    <button id="previous">Previous Question</button>
+    <button id="next">Next Question</button>
+    <button id="submit">Submit Quiz</button>
     <div id="results"></div>
     <div id="leaderboard"></div>
 
