--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     
 </head>
 <body>
-    <div class="quiz-container">
-        <div id="quiz"></div>
+    <div id="main">
+        <h1 class="time"></h1>
+        <div class="quiz-container">
+            <div id="quiz">
+                <div id="current-question"></div>
+            </div>
+        </div>
+            <button id="previous">Previous Question</button>
+            <button id="next">Next Question</button>
+            <button id="submit">Submit Quiz</button>
+        <div id="results"></div>
+        <div id="leaderboard"></div>
     </div>
-    <button id="previous">Previous Question</button>
-    <button id="next">Next Question</button>
-    <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
-    <div id="leaderboard"></div>
-
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
