--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
             <button id="submit">Submit Quiz</button>
         </div>
         <div id="results"></div>
-        <div id="leaderboard"></div>
+        <div id="leaderboard">
+            <ol>
+                <li id="first-place">
+
+                </li>
+                <li id="second-place">
+
+                </li>
+                <li id="third-place">
+
+                </li>
+                <li id="fourth-place">
+
+                </li>
+                <li id="fifth-place">
+
+                </li>
+            </ol>
+        </div>
     </div>
     
     <script src="script.js"></script>
