--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1 class="time"></h1>
+    <h1 id="time"></h1>
 
     <div class="quiz-container">
         <div class="start" id="start-screen">
@@ -21,6 +21,7 @@
             <h4>Answer the following questions within the time limit.</h4>
             <h4>However, if you choose the wrong answer, you will lose time.</h4>
             <button id="start">Let's Begin!</button>
+            <a href="leaderboard.html"><button>View Leaderboard</button></a>
         </div>
         <div class="hide" id="questions">
             <h3 id="question"></h3>
