--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="hide" id="end-screen">
             <h3>Conglaturations! A Winner Is You!</h3>
-            <p>Final score: <span id="final-score"></span></p>
+            <p>Final score: <span id="total"></span></p>
             <p>
                 Enter your initials and put 'em in the Hall of Fame: <input type="text" id="initials" max="3" />
                 <button id="submit">Submit Score</button>
